[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/fade_in_info.gd" type="Script" id=1]
[ext_resource path="res://Resources/Button_Back.png" type="Texture" id=2]
[ext_resource path="res://Resources/PixelText.tres" type="Theme" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Backround" type="ColorRect" parent="."]
margin_right = 42.0
margin_bottom = 1979.0
rect_scale = Vector2( 24.36, 0.306721 )
color = Color( 0.141176, 0.392157, 0.745098, 1 )

[node name="Info Text" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 256.0
margin_top = 175.0
margin_right = 832.0
margin_bottom = 415.0
theme = ExtResource( 3 )
text = "This was made for a school project, and was made in a month."

[node name="BackButton" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 16.0
margin_top = 15.0
margin_right = 64.0
margin_bottom = 63.0
theme = ExtResource( 3 )
texture_normal = ExtResource( 2 )
expand = true

[node name="FadeText" type="Tween" parent="."]

[node name="FadeButton" type="Tween" parent="."]

[node name="Wait" type="Timer" parent="."]
wait_time = 2.0

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
